--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           <button class="login">Login</button>
           <div class="social-mob">
             <a href="#">
-              <span class="sr-only" aria-label="Go to facebook" >Facebook</span>
+              <span class="sr-only">Facebook</span>
               <span class="facebook"></span>
             </a>
-            <a href="https://twitter.com/coderkc27"  aria-label="Go to twitter" target="_blank">
+            <a href="https://twitter.com/coderkc27" target="_blank">
               <span class="sr-only">Twitter</span>
               <span class="twitter"></span>
             </a>
